[gd_scene load_steps=3 format=3 uid="uid://dfbyvh3cpwmdc"]

[ext_resource type="Script" path="res://Utils/item_option.gd" id="1_myjsl"]
[ext_resource type="Texture2D" uid="uid://fgvjnmtamh62" path="res://Textures/Items/Weapons/sword.png" id="1_pyiv6"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.159988
offset_bottom = -0.0400047
color = Color(0.701961, 0.701961, 0.701961, 1)
script = ExtResource("1_myjsl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_pyiv6")

[node name="lbl_name" type="Label" parent="."]
offset_left = 39.0
offset_top = 1.0
offset_right = 86.0
offset_bottom = 27.0
text = "Name"

[node name="lbl_description" type="Label" parent="."]
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 8
text = "Description of item"

[node name="lbl_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 174.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 12
text = "Level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
